# CPP-OpenGL-game-engine

./: CMakeLists.txt  README.md  main.cpp
Engine/: CMakeLists.txt  Camera.cpp  Camera.h  Collision.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Light.h  Logger.h  Material.h  Mesh.cpp  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h  Player.h  RenderObject.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Skybox.cpp  Skybox.h  Texture.h  TextureLoader.cpp  TextureLoader.h  TriggerObject.h  Window.cpp  Window.h
Objects/: Cube.h
